--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
                     <a href="#projects" class="btn-creative btn-creative-primary">
                         View Projects <span class="btn-icon-right">➜</span>
                     </a>
-                    <a href="#contact" class="btn-creative btn-creative-outline">
-                        Contact Me
+                    <a href="assets/Momen-SpringBoot.pdf" download="Momen-SpringBoot.pdf" class="btn-creative btn-creative-outline">
+                        <span>Download CV</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 8px;"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
                     </a>
                 </div>
 
@@ -213,9 +214,6 @@
             </div>
         </section>
 
-        <!-- ==================== PROJECTS ==================== -->
-        <section id="projects" class="section projects-section">
-            <div class="container">
         <!-- ==================== PROJECTS (CREATIVE CARDS) ==================== -->
         <section id="projects" class="section projects-section">
             <div class="container">
@@ -229,6 +227,10 @@
                                 <span class="project-unique-icon">🎓</span>
                                 <a href="https://github.com/R00t105/Online_Learning_Platform" target="_blank" class="github-icon-link" aria-label="View Online Learning on GitHub">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                                    <span class="github-label">
+                                        GitHub
+                                        <svg class="github-arrow" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="transform: rotate(180deg);"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
+                                    </span>
                                 </a>
                             </div>
                             <h3 class="project-title">Online Learning Platform</h3>
@@ -250,6 +252,10 @@
                                 <span class="project-unique-icon">✅</span>
                                 <a href="https://github.com/R00t105/Task-Management" target="_blank" class="github-icon-link" aria-label="View Task Management on GitHub">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                                    <span class="github-label">
+                                        GitHub
+                                        <svg class="github-arrow" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="transform: rotate(180deg);"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
+                                    </span>
                                 </a>
                             </div>
                             <h3 class="project-title">Task Management</h3>
@@ -271,6 +277,10 @@
                                 <span class="project-unique-icon">📚</span>
                                 <a href="https://github.com/R00t105/Library-Management-System" target="_blank" class="github-icon-link" aria-label="View Library System on GitHub">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                                    <span class="github-label">
+                                        GitHub
+                                        <svg class="github-arrow" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="transform: rotate(180deg);"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
+                                    </span>
                                 </a>
                             </div>
                             <h3 class="project-title">Library Management</h3>
@@ -286,8 +296,6 @@
                     </div>
 
                 </div>
-            </div>
-        </section>
             </div>
         </section>
 
